increase timeout on netlify to account for cold start in polling

--- a/netlify.toml
+++ b/netlify.toml
@@ -6,6 +6,10 @@
   # The folder that Vite builds your final static site into
   publish = "dist" 
 
+[functions]
+  # Increase the timeout for all functions to 25 seconds
+  timeout = 25
+
 # This sets up the local development server (netlify dev)
 [dev]
   # The command to start your frontend app
